Tour lists styling done

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,9 @@ $black: #222;
 $blue: #1074B9;
 $white: #fff;
 $gray: #ececec;
+$orange: #F4961F;
+
+$transition: all 0.3s linear;
 
 body {
   margin: 0;
