--- a/src/components/TourLists/Tour/tour.scss
+++ b/src/components/TourLists/Tour/tour.scss
@@ -43,6 +43,11 @@
             margin: 0.2rem 0 0.6rem 0;
         }
 
+        h5 {
+            display: flex;
+            align-items: center;
+        }
+
         h4, h5 {
             text-transform: capitalize;
         }
