Remove tour option added

--- a/src/components/TourLists/Tour/tour.scss
+++ b/src/components/TourLists/Tour/tour.scss
@@ -22,6 +22,7 @@
             cursor: pointer;
             transition: $transition;
             opacity: 0;
+            font-size: 1.6rem;
         }
 
         &:hover {
